fixed alignement

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -51,7 +51,9 @@
   height: 4rem;
   border-radius: 50%;
 }
-
+.justify-home{
+  text-align: justify !important;
+   }
 .widget-49 .widget-49-title-wrapper .widget-49-date-primary .widget-49-date-day {
   color: #4e73e5;
   font-weight: 500;
