--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,10 @@
 body{
   font-size: 10px !important;
 }
+.justify-home{
+ text-align: justify !important;
+  }
+
 article,
 aside,
 details,
